--- a/index.html
+++ b/index.html
@@ -214,54 +214,55 @@
       </div>
     </section>
     <!-- End Counts Section -->
-    <section id="about_us" class="d-flex align-items-center about_us mt-5">
+    <section id="about_us" class="about_us py-5">
       <div class="container">
-        <div class="row">
-          <h2
-            style="
-              font-size: 40px;
-              text-align: center;
-              font-weight: 600;
-              padding: 0% 0 5% 0;
-            "
-          >
-            About Us
-          </h2>
-          <div
-            class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center"
-          >
-            <p class="hero_description">
-              In 2008, the Honorable Prime Minister of Bangladesh, Sheikh Hasina
-              declared "Vision 2021: Digital Bangladesh". Inspired by the
-              vision, ministries and govt. organizations took various
-              initiatives for public service digitization and e-Gov
-              implementation, most of which were silo, ad-hoc basis, scattered
-              and developed without any common standard approach or precise
-              plan. Therefore, a2i, Prime Minister’s Office innovated a
-              customized but effective design and planning model for service
-              digitalization and capacity enhancement which is widely known as
-              Digital Service Design Lab (DSDL). This model is very popular in
-              Bangladesh Govt. for its uniqueness and impacts. For public
-              service digitalization, this is a synergistic planning approach
-              i.e. service recipient, service provider, decision makers and
-              technology experts plan together sharing their knowledge and
-              experiences. It has step-by-step methodical approach but A-Z i.e.
-              study, diagnosis, analysis, design & plan of digitalization which
-              is basically hands on work for consecutive 7 days to develop
-              e-Government Masterplan. This results extremely high ownership of
-              Govt. officials generating maximum output in minimum time
-              enhancing digitalization capacity significantly. The interesting
-              tools of DSDL generate tremendous interest within non-technical
-              Govt. officials engaging highest spontaneous effort for even
-              technical analysis design and plan.
-            </p>
+        <div class="row mb-5">
+          <div class="col-12 text-center">
+            <h2 class="about_title">About Us</h2>
           </div>
-          <div class="col-lg-6 order-1 order-lg-2 about_us">
-            <img src="assets/img/ict mister.jpeg" alt="" />
+        </div>
+        <div class="row about_us_contents">
+          <div class="col-12 col-md-6 col-lg-6">
+            <div class="description">
+              <p>
+                In 2008, the Honorable Prime Minister of Bangladesh, Sheikh
+                Hasina declared "Vision 2021: Digital Bangladesh". Inspired by
+                the vision, ministries and govt. organizations took various
+                initiatives for public service digitization and e-Gov
+                implementation, most of which were silo, ad-hoc basis, scattered
+                and developed without any common standard approach or precise
+                plan. Therefore, a2i, Prime Minister’s Office innovated a
+                customized but effective design and planning model for service
+                digitalization and capacity enhancement which is widely known as
+                Digital Service Design Lab (DSDL). This model is very popular in
+                Bangladesh Govt. for its uniqueness and impacts. For public
+                service digitalization, this is a synergistic planning approach
+                i.e. service recipient, service provider, decision makers and
+                technology experts plan together sharing their knowledge and
+                experiences. It has step-by-step methodical approach but A-Z
+                i.e. study, diagnosis, analysis, design & plan of digitalization
+                which is basically hands on work for consecutive 7 days to
+                develop e-Government Masterplan. This results extremely high
+                ownership of Govt. officials generating maximum output in
+                minimum time enhancing digitalization capacity significantly.
+                The interesting tools of DSDL generate tremendous interest
+                within non-technical Govt. officials engaging highest
+                spontaneous effort for even technical analysis design and plan.
+                In Bangladesh more than 30 ministries and their 150+ govt.
+                service delivery organizations applied this method for
+                digitalizing 1600+ services i.e.
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-6">
+            <div class="image">
+              <img class="w-100" src="./assets/img/ict mister.jpeg" alt="" />
+            </div>
           </div>
         </div>
       </div>
     </section>
+
     <!-- End Hero -->
 
     <main class="container" id="main">
