--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </section>
     <!-- End Counts Section -->
     <!-- Start About Us -->
-    <section id="about_us" class="about_us py-5">
+    <section id="about_us" class="about_us">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
