--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
       <!-- End Roadmap -->
 
       <!-- Contact Section -->
-      <section id="contact" class="contact mb-5 mt-4">
+      <section id="contact" class="contact">
         <div class="container">
           <div class="section-title">
             <span>Contact</span>
