--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container footer-bottom clearfix text-center">
-        <div>Copyright © 2022 । All right reserved, a2i</div>
+        <div>Copyright © 2022 । All right reserved, a2i.</div>
         <small>
           Crafted by
           <a
